--- a/wrangler.toml
+++ b/wrangler.toml
@@ -16,5 +16,52 @@ globs = ["**/*.js"]
 type = "ESModule"
 globs = ["**/*.mjs"]
 
+[[headers]]
+for = "/*"
+[headers.values]
+  X-Frame-Options = "DENY"
+  X-Content-Type-Options = "nosniff"
+  X-Robots-Tag = "noindex, nofollow"
+
+[[headers]]
+for = "/assets/*.js"
+[headers.values]
+  Content-Type = "application/javascript; charset=utf-8"
+  Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "/assets/*.mjs"
+[headers.values]
+  Content-Type = "application/javascript; charset=utf-8"
+  Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "/assets/*.css"
+[headers.values]
+  Content-Type = "text/css; charset=utf-8"
+  Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "/assets/*.map"
+[headers.values]
+  Content-Type = "application/json; charset=utf-8"
+  Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "/manifest.webmanifest"
+[headers.values]
+  Content-Type = "application/manifest+json; charset=utf-8"
+  Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+for = "/*.js"
+[headers.values]
+  Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+for = "/*.mjs"
+[headers.values]
+  Content-Type = "application/javascript; charset=utf-8"
+
 [vars]
 NODE_VERSION = "18"
