updated wrangler again

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -63,5 +63,15 @@ for = "/*.mjs"
 [headers.values]
   Content-Type = "application/javascript; charset=utf-8"
 
+[[headers]]
+for = "/**/*.mjs"
+[headers.values]
+  Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+for = "/pdfjs-dist/**/*.mjs"
+[headers.values]
+  Content-Type = "application/javascript; charset=utf-8"
+
 [vars]
 NODE_VERSION = "18"
