--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
     "dompurify": "^3.0.6",
+    "dotenv": "^17.2.3",
     "firebase": "^10.7.1",
     "lucide-react": "^0.294.0",
     "qrcode": "^1.5.3",
