--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dompurify": "^3.0.6",
     "dotenv": "^17.2.3",
     "firebase": "^10.7.1",
+    "firebase-admin": "^13.5.0",
     "lucide-react": "^0.294.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
