--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "firebase:setup-cors": "gsutil cors set cors.json gs://inventory-management-090999.appspot.com"
   },
   "vitest": {
-    "setupFiles": ["src/setupTests.ts"],
+    "setupFiles": [
+      "src/setupTests.ts"
+    ],
     "globals": true,
     "environment": "jsdom"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^3.3.2",
+    "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
@@ -43,6 +46,9 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/dompurify": "^3.0.8",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.43",
@@ -54,15 +60,12 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-pwa": "^1.0.3",
-    "vitest": "^1.0.4",
-    "jsdom": "^22.1.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/user-event": "^14.4.3"
+    "vitest": "^1.0.4"
   }
 }
