--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^3.0.6",
     "dompurify": "^3.0.6",
     "dotenv": "^17.2.3",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.294.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
