--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-# Supabase Configuration
-# Get these values from your Supabase project dashboard:
-# Project Settings > API
+# Firebase Configuration
+# Get these values from your Firebase project settings
+VITE_FIREBASE_API_KEY=your-api-key-here
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_APP_ID=your-app-id
+VITE_FIREBASE_MEASUREMENT_ID=your-measurement-id
 
-# Your Supabase project URL
-VITE_SUPABASE_URL=your-project-url
-
-# Your Supabase anon/public key (safe to expose in client-side code)
-VITE_SUPABASE_ANON_KEY=your-anon-key
-
-# Optional: Service Role Key (for server-side operations only)
-# ⚠️ NEVER expose this in client-side code - it bypasses Row Level Security
-# VITE_SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+# Application Configuration
+VITE_APP_NAME="1584 Design Inventory Management"
+VITE_APP_VERSION="1.0.0"
