--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.2.3",
     "heic2any": "^0.0.4",
     "lucide-react": "^0.294.0",
+    "pdfjs-dist": "^4.10.38",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
