--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "fake-indexeddb": "^6.2.5",
     "jsdom": "^22.1.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
